# LogLib

./: .gitignore  .gitmodules  CMakeLists.txt
Demo/: CMakeLists.txt
Demo/source/: Demo.cpp
LogLib/: CMakeLists.txt
LogLib/include/LogLib/: Common.hpp  ImGui.hpp  Log.hpp  LogLib.hpp  LogReader.hpp  LogWindow.hpp  LogWriter.hpp
LogLib/source/: Common.cpp  ImGui.cpp  Log.cpp  LogReader.cpp  LogWindow.cpp  LogWriter.cpp
LogLibViewer/: CMakeLists.txt
LogLibViewer/source/: GLFWImGuiOGLWindow.cpp  GLFWImGuiOGLWindow.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  ImGuiWindow.hpp  LogLibViewer.cpp  LogLibViewer.hpp  main.cpp
